--- a/css-flags/index.html
+++ b/css-flags/index.html
@@ -27,6 +27,7 @@
 		<div class="flag_container">
 			<h3 class="flag_title">Kuwait</h3>
 			<div class="flag flag--kuwait">
+				<div class="triangle"></div>
 				<div class="kuwait-c-1"></div>
 				<div class="kuwait-c-2"></div>
 				<div class="kuwait-c-3"></div>
@@ -60,16 +61,16 @@
 		<div class="flag_container">
 			<h3 class="flag_title">Greece</h3>
 			<div class="flag flag--greece">
-				<div class="square"></div>
-				<div class="stripes stripes-blue"></div>
-				<div class="stripes stripes-white"></div>
-				<div class="stripes strieps-blue"></div>
-				<div class="stripes stripes-white"></div>
-				<div class="stripes stripes-blue"></div>
-				<div class="stripes stripes-white"></div>
-				<div class="stripes stripes-blue"></div>
-				<div class="stripes stripes-white"></div>
-				<div class="stripes stripes-blue"></div>
+				<div class="square">
+					<div class="square-stripe-horizontal"></div>
+					<div class="square-stripe-vertical"></div>
+				</div>
+				<div class="stripes"></div>
+				<div class="stripes"></div>
+				<div class="stripes"></div>
+				<div class="stripes"></div>
+				<div class="stripes"></div>
+
 			</div>
 		</div>
 	</body>
