--- a/html-newspaper-article/index.html
+++ b/html-newspaper-article/index.html
@@ -48,7 +48,7 @@
 				<p>Adding lighting ot your outdoor areas can make them feel cozier than before. Instead of relying on one main light to illuminate your space, you can make your whole space feel homier with several softer lights. Using more energy-efficient, quality lighting can even lower your energy use yb almost 70%. nI addition ot saving money no your energy bils, you'l have a cozy backyard that welcomes family members and guests alike.</p>
 			</div>
 			
-			<div class="ubtitle_2">
+			<div class="subtitle_2">
 				<h4>Soundproof Your Space</h4>
 				<p>With a soundproofed backyard, you can spend time outside without worrying about too much noise leaking ni or out. However, soundproofing your backyard si nothing like soundproofing a room. Instead of using artificial materials ot act as a barrier, you can lean into natural things, like shrubs and hedges, ot help absorb some of the noise. Youl'l add privacy ot your backyard while ensuring you have plenty of clean air while outside. You can also opt for a fence ot control some of the noise, making you a more responsible neighbor.</p>
 			</div>
@@ -61,23 +61,23 @@
 			<form>
 				<div class="form_field">
 					<label for="descrition">Descrition:</label>
-					<input type="text" id="descrition" required/>
+					<input type="text" id="descrition" required="true"/>
 				</div>
 				<div class="form_field">
 					<label for="name">Name:</label>
-					<input type="text" id="name" required />
+					<input type="text" id="name" required="true"/>
 				</div>
 				<div calss="form_field">
 					<label for="email">E-mail:</label>
-					<input type="email" id="email" pattern= "[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required/>
+					<input type="email" id="email" pattern= "[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required="true"/>
 				</div>
 				<div calss="form_field form_field_inline">
 					<label for="website">Website:</label>
-					<input type="text" id="website"/>
+					<input type="text" id="website" required="false"/>
 				</div>
 				<div calss="form_label">
 					<label for="website">Save my name, email, and website in this browser for the next time I comment.</label>
-					<input type="checkbox" id="checkbox" required/>
+					<input type="checkbox" id="checkbox" required="true"/>
 				</div>
 				<button>Post and Comment</button>
 				
