change-folder-index

--- a/css-design-systems/index.html
+++ b/css-design-systems/index.html
@@ -106,20 +106,9 @@
 						</div>
 						<div class="form-container">
 							<input type="text" placeholder="placeholder">
+							<span class="error-label"> Error Label</span>
 						</div>
-						<div class="form-container">
-							<input type="text" placeholder="placeholder" disabled>
-						</div>
-					</form>
-					<form>
-						<div class="form-container">
-							
-								<label for="text">Field Label</label>
-								<input type="text" placeholder="placeholder">
-						</div>
-						<div class="form-container">
-							<input type="text" placeholder="placeholder">
-						</div>
+						
 						<div class="form-container">
 							<input type="text" placeholder="placeholder" disabled>
 						</div>
@@ -127,10 +116,15 @@
 					<form>
 						<div class="form-container">
 							<label for="text">Field Label</label>
-							<input type="text" placeholder="placeholder">
+							<div class="field-group">
+								<input type="text" placeholder="placeholder">
+							</div>
 						</div>
 						<div class="form-container">
 							<input type="text" placeholder="placeholder">
+							<div class="icon-left">
+								<i class="icon" data-feather="search"></i>
+							</div>
 						</div>
 						<div class="form-container">
 							<input type="text" placeholder="placeholder" disabled>
