--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -6,6 +6,14 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="main-container">
+        <ul>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Tutorial</a></li>
+            <li><a href="#">Blog</a></li>
+        </ul>
+        
+    </div>
 </body>
 </html>
