alterações nav bar e hero section

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -24,12 +24,30 @@
                 </ul>
             </div>
             <div class="headerDesktop_sign">
-                <button class="btn btn__signin">Sign in</button>
-                <button class="btn btn__square btn__sigup">Sign up</button>
+                <a class="btn btn__signin">Sign in</a>
+                <a class="btn btn__square btn__sigup">Sign up</a>
             </div>
         </div> 
 
     </header>
+    <div class="hero">
+        <div class="hero-container">
+            <h2 class="hero-title">
+                Make your website wonderful
+            </h2>
+            <p>Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+            <div class="hero-button">
+                <button class="btn btn__square btn__trial">Set a free trial</button>
+                <button class="btn btn__square btn__learnmore">Learn More</button>
+            </div>
+            <div class="hero-video">
+                <video width="400px">
+                    <source src="assets/video.mp4">
+                </video>
+                <button class="btn btn__round btn__video">Watch More</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
