--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -9,13 +9,13 @@
 <body>
     <header class="headerDesktop">
         <div class="headerDesktop-container">
-            <div class="headerDesktop_logo">
-                <div href="" class="header_logo">
+            <div class="headerDesktop-logo">
+                <div href="" class="header-logo">
                     <img src="assets/logo.png">
                 </div>
                 
             </div>
-            <div class="headerDesktop_middle">
+            <div class="headerDesktop-middle">
                 <ul>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">About</a></li>
@@ -23,31 +23,31 @@
                     <li><a href="#">Blog</a></li>
                 </ul>
             </div>
-            <div class="headerDesktop_sign">
-                <a class="btn btn__signin">Sign in</a>
-                <a class="btn btn__square btn__sigup">Sign up</a>
+            <div class="headerDesktop-sign">
+                <a class="btn btn-signin">Sign in</a>
+                <a class="btn btn-square btn-sigup">Sign up</a>
             </div>
         </div> 
 
     </header>
-    <div class="hero">
+    <section class="hero">
         <div class="hero-container">
             <h2 class="hero-title">
                 Make your website wonderful
             </h2>
             <p>Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
             <div class="hero-button">
-                <button class="btn btn__square btn__trial">Set a free trial</button>
-                <button class="btn btn__square btn__learnmore">Learn More</button>
+                <button class="btn btn-square btn-trial">Set a free trial</button>
+                <button class="btn btn-square btn-learnmore">Learn More</button>
             </div>
             <div class="hero-video">
                 <video width="400px">
                     <source src="assets/video.mp4">
                 </video>
-                <button class="btn btn__round btn__video">Watch More</button>
+                <button class="btn btn-round btn-ideo">Watch More</button>
             </div>
         </div>
-    </div>
+    </section>
     
 </body>
 </html>
