--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -30,9 +30,9 @@
         </div> 
 
     </header>
-    <section class="hero">
-        <div class="hero-container">
-            <h2 class="hero-title">
+    <section class="hero-section">
+        <div class="hero-section-container">
+            <h2 class="hero-section-title">
                 Make your website wonderful
             </h2>
             <p>Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
@@ -48,6 +48,21 @@
             </div>
         </div>
     </section>
+    <section class="about-section">
+
+    </section>
+    <section class="cards-section">
+
+    </section>
+    <section class="articles-section">
+
+    </section>
+    <section class="advertising-section">
+
+    </section>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
