--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -41,7 +41,7 @@
                 <button class="btn btn-square btn-learnmore">Learn More</button>
             </div>
             <div class="hero-video">
-                <video width="400px">
+                <video width="300px">
                     <source src="assets/video.mp4">
                 </video>
                 <button class="btn btn-round btn-ideo">Watch More</button>
@@ -49,7 +49,14 @@
         </div>
     </section>
     <section class="about-section">
+        <div class="about-section-container">
+            <h1>How Simple Works</h1>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat.</p>
+            <div class="about-section-image">
+                <img src="assets/hero-image.png" alt="hero-image" width="500px">
+            </div>
 
+        </div>
     </section>
     <section class="cards-section">
 
