adição conteudo advertising section

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -44,7 +44,7 @@
                 <video width="300px">
                     <source src="assets/video.mp4">
                 </video>
-                <button class="btn btn-round btn-ideo">Watch More</button>
+                <button class="btn btn-round btn-video">Watch More</button>
             </div>
         </div>
     </section>
@@ -65,7 +65,10 @@
 
     </section>
     <section class="advertising-section">
-
+        <div class="advertising-section-container">
+            <p>Ready to get started</p>
+            <button class="btn btn-square btn-advertising">Watch More</button>
+        </div>
     </section>
     <footer>
         <div class="footer-left">
