alterações menu e hero section

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -9,24 +9,24 @@
 <body>
     <header class="headerDesktop">
         <div class="headerDesktop-container">
-            <div class="headerDesktop-logo">
-                <div href="" class="header-logo">
-                    <img src="assets/logo.png">
+                <div class="headerDesktop-logo">
+                    <div href="" class="header-logo">
+                        <img src="assets/logo.png">
+                    </div>
+                    
                 </div>
-                
-            </div>
-            <div class="headerDesktop-middle">
-                <ul>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Tutorial</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
-            <div class="headerDesktop-sign">
-                <a class="btn btn-signin">Sign in</a>
-                <a class="btn btn-square btn-sigup">Sign up</a>
-            </div>
+                <div class="headerDesktop-middle">
+                    <ul>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Tutorial</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="headerDesktop-links">
+                    <a class="btn-square btn-signin" href="#">Sign in</a>
+                    <a class="btn-square btn-signup" href="#">Sign up</a>
+                </div>
         </div> 
 
     </header>
@@ -37,14 +37,14 @@
             </h1>
             <p>Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
             <div class="hero-button">
-                <button class="btn btn-square btn-trial">Set a free trial</button>
-                <button class="btn btn-square btn-learnmore">Learn More</button>
+                <button class="btn-square btn-trial">Set a free trial</button>
+                <button class="btn-square btn-learnmore">Learn More</button>
             </div>
             <div class="hero-video">
                 <video width="300px">
                     <source src="assets/video.mp4">
                 </video>
-                <button class="btn btn-round btn-video">Watch More</button>
+                <button class="btn-round btn-video">Watch More</button>
             </div>
         </div>
     </section>
@@ -67,7 +67,7 @@
     <section class="advertising-section">
         <div class="advertising-section-container">
             <p>Ready to get started</p>
-            <button class="btn btn-square btn-advertising">Watch More</button>
+            <button class="btn-square btn-advertising">Watch More</button>
         </div>
     </section>
     <footer>
