altreções butões header

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -24,8 +24,8 @@
                     </ul>
                 </div>
                 <div class="headerDesktop-links">
-                    <a class="btn-square btn-signin" href="#">Sign in</a>
-                    <a class="btn-square btn-signup" href="#">Sign up</a>
+                    <a class="btn btn-signin" href="#">Sign in</a>
+                    <a class="btn btn-square btn-signup" href="#">Sign up</a>
                 </div>
         </div> 
 
