alterações botões e cards

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -37,8 +37,8 @@
             </h1>
             <p>Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
             <div class="hero-button">
-                <button class="btn-square btn-trial">Set a free trial</button>
-                <button class="btn-square btn-learnmore">Learn More</button>
+                <button type="button" class="btn btn-square btn-trial">Set a free trial</button>
+                <button type="button" class="btn btn-square btn-learnmore">Learn More</button>
             </div>
             <div class="hero-video">
                 <video width="300px">
@@ -59,6 +59,11 @@
         </div>
     </section>
     <section class="cards-section">
+        <div clas="card">
+            <span class="circle"></span>
+            <h4>Headless CMS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
 
     </section>
     <section class="articles-section">
