--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -59,7 +59,32 @@
         </div>
     </section>
     <section class="cards-section">
-        <div clas="card">
+        <div class="card">
+            <span class="circle"></span>
+            <h4>Headless CMS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="card">
+            <span class="circle"></span>
+            <h4>Headless CMS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="card">
+            <span class="circle"></span>
+            <h4>Headless CMS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="card">
+            <span class="circle"></span>
+            <h4>Headless CMS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="card">
+            <span class="circle"></span>
+            <h4>Headless CMS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="card">
             <span class="circle"></span>
             <h4>Headless CMS</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
