criação container na cards section

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -58,39 +58,45 @@
 
         </div>
     </section>
-    <section class="cards-section">
-        <div class="card">
-            <span class="circle"></span>
-            <h4>Headless CMS</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="section-container">
+        <div class="cards-section-container">
+            <h1>Explore the solutions</h1>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat.</p>
         </div>
-        <div class="card">
-            <span class="circle"></span>
-            <h4>Headless CMS</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="card">
-            <span class="circle"></span>
-            <h4>Headless CMS</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="card">
-            <span class="circle"></span>
-            <h4>Headless CMS</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="card">
-            <span class="circle"></span>
-            <h4>Headless CMS</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="card">
-            <span class="circle"></span>
-            <h4>Headless CMS</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
+        <section class="cards-section">
+            <div class="card">
+                <span class="circle"></span>
+                <h4>Headless CMS</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="card">
+                <span class="circle"></span>
+                <h4>Headless CMS</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="card">
+                <span class="circle"></span>
+                <h4>Headless CMS</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="card">
+                <span class="circle"></span>
+                <h4>Headless CMS</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="card">
+                <span class="circle"></span>
+                <h4>Headless CMS</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="card">
+                <span class="circle"></span>
+                <h4>Headless CMS</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
 
-    </section>
+        </section>
+    </div>
     <section class="articles-section">
 
     </section>
