--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -63,6 +63,7 @@
             <h1>Explore the solutions</h1>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat.</p>
         </div>
+        <div class="card-container">
         <section class="cards-section">
             <div class="card">
                 <span class="circle"></span>
@@ -96,6 +97,8 @@
             </div>
 
         </section>
+    </div>
+
     </div>
     <section class="articles-section">
 
