--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -101,7 +101,81 @@
 
     </div>
     <section class="articles-section">
-
+        <div class="article-header">
+            <h1>The most innovative businesses choose Simple</h1>
+            <div class="articles-header-buttons">
+                <button type="button" class="btn btn-round btn-development">Development</button>
+                <button type="button" class="btn btn-round btn-blockchain">Blockchain</button>
+                <button type="button" class="btn btn-round btn-nextjs">Nextjs</button>
+                <button type="button" class="btn btn-round btn-reactjs">Reactjs</button>
+            </div>
+        </div>
+        <div class="article-body">
+            <div class="wrapper-box">
+                <div class="wrapper-box-img">
+                    <span class="img-retangle"></span>
+                </div>
+                <div class="wrapper-box-buttons">
+                    <button type="button" class="btn btn-round btn-development-secundary">Development</button>
+                    <button type="button" class="btn btn-round btn-blockchain-secundary">Blockchain</button>
+                </div>
+                <div class="wrapper-box-text">
+                    “How HubSpot saved 25% on developing costs by switching to Simple.”
+                </div>
+                <div class="wrapper-box-user">
+                    <span class="user-circle"></span>
+                    <h6>By Harry Potter</h6>
+                </div>
+            </div>
+            <div class="wrapper-box">
+                <div class="wrapper-box-img">
+                    <span class="img-retangle"></span>
+                </div>
+                <div class="wrapper-box-buttons">
+                    <button type="button" class="btn btn-round btn-development-secundary">Development</button>
+                    <button type="button" class="btn btn-round btn-blockchain-secundary">Blockchain</button>
+                </div>
+                <div class="wrapper-box-text">
+                    “How HubSpot saved 25% on developing costs by switching to Simple.”
+                </div>
+                <div class="wrapper-box-user">
+                    <span class="user-circle"></span>
+                    <h6>By Harry Potter</h6>
+                </div>
+            </div>
+            <div class="wrapper-box">
+                <div class="wrapper-box-img">
+                    <span class="img-retangle"></span>
+                </div>
+                <div class="wrapper-box-buttons">
+                    <button type="button" class="btn btn-round btn-development-secundary">Development</button>
+                    <button type="button" class="btn btn-round btn-blockchain-secundary">Blockchain</button>
+                </div>
+                <div class="wrapper-box-text">
+                    “How HubSpot saved 25% on developing costs by switching to Simple.”
+                </div>
+                <div class="wrapper-box-user">
+                    <span class="user-circle"></span>
+                    <h6>By Harry Potter</h6>
+                </div>
+            </div>
+            <div class="wrapper-box">
+                <div class="wrapper-box-img">
+                    <span class="img-retangle"></span>
+                </div>
+                <div class="wrapper-box-buttons">
+                    <button type="button" class="btn btn-round btn-development-secundary">Development</button>
+                    <button type="button" class="btn btn-round btn-blockchain-secundary">Blockchain</button>
+                </div>
+                <div class="wrapper-box-text">
+                    “How HubSpot saved 25% on developing costs by switching to Simple.”
+                </div>
+                <div class="wrapper-box-user">
+                    <span class="user-circle"></span>
+                    <h6>By Harry Potter</h6>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="advertising-section">
         <div class="advertising-section-container">
