--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -180,7 +180,7 @@
     <section class="advertising-section">
         <div class="advertising-section-container">
             <p>Ready to get started</p>
-            <button class="btn-square btn-advertising">Watch More</button>
+            <button class="btn-square btn-advertising">Learn More</button>
         </div>
     </section>
     <footer>
