--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="btn btn-square btn-learnmore">Learn More</button>
             </div>
             <div class="hero-video">
-                <video width="300px">
+                <video class="video">
                     <source src="assets/video.mp4">
                 </video>
                 <button class="btn-round btn-video">Watch More</button>
