alterações butão video e formulario

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -44,7 +44,7 @@
                 <video class="video">
                     <source src="assets/video.mp4">
                 </video>
-                <button class="btn-round btn-video">Watch More</button>
+                <button class="btn-round btn-video">Watch more</button>
             </div>
         </div>
     </section>
