--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -50,6 +50,7 @@
     </section>
     <section class="about-section">
         <div class="about-section-container">
+           <div class="about-section-line"></div>
             <h1>How Simple Works</h1>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat.</p>
             <div class="about-section-image">
