--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -10,9 +10,9 @@
     <header class="headerDesktop">
         <div class="headerDesktop-container">
                 <div class="headerDesktop-logo">
-                    <div href="" class="header-logo">
+                    <a href="index.html" class="header-logo">
                         <img src="assets/logo.png">
-                    </div>
+                    </a>
                     
                 </div>
                 <div class="headerDesktop-middle">
@@ -24,7 +24,7 @@
                     </ul>
                 </div>
                 <div class="headerDesktop-links">
-                    <a class="btn btn-signin" href="#">Sign in</a>
+                    <a class="btn btn-signin" href="">Sign in</a>
                     <a class="btn btn-square btn-signup" href="#">Sign up</a>
                 </div>
         </div> 
@@ -37,14 +37,14 @@
             </h1>
             <p>Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
             <div class="hero-button">
-                <button type="button" class="btn btn-square btn-trial">Set a free trial</button>
-                <button type="button" class="btn btn-square btn-learnmore">Learn More</button>
+                <button type="button" class="btn btn-square btn-trial" href="#">Set a free trial</button>
+                <button type="button" class="btn btn-square btn-learnmore" href="#">Learn More</button>
             </div>
             <div class="hero-video">
                 <video class="video">
                     <source src="assets/video.mp4">
                 </video>
-                <button class="btn-round btn-video">Watch more</button>
+                <button class="btn btn-round btn-video" href="#">Watch more</button>
             </div>
         </div>
     </section>
@@ -197,23 +197,25 @@
         </div>
         <div class="footer-middle-left">
             <h1 class="footer-col-1-header">Products</h1>
-            <a class="footer-link footer-col-1-child-1">Web Studio</a>
-            <a class="footer-link footer-col-1-child-2">DynamicBox Flex</a>
-            <a class="footer-link footer-col-1-child-3">Programming Forms</a>
-            <a class="footer-link footer-col-1-child-5">Integrations</a>
-            <a class="footer-link footer-col-1-child-6">Command Line</a>
+            <a class="footer-link footer-col-1-child-1" href="#">Web Studio</a>
+            <a class="footer-link footer-col-1-child-2" href="#">DynamicBox Flex</a>
+            <a class="footer-link footer-col-1-child-3" href="#">Programming Forms</a>
+            <a class="footer-link footer-col-1-child-5" href="#"> Integrations</a>
+            <a class="footer-link footer-col-1-child-6" href="#">Command Line</a>
         </div>
         <div class="footer-middle-rigth">
                 <h1 class="footer-col-1-header">Resources</h1>
-                <a class="footer-link footer-col-1-child-1">Web Studio</a>
-                <a class="footer-link footer-col-1-child-2">DynamicBox Flex</a>
-                <a class="footer-link footer-col-1-child-3">Programming Forms</a>
-                <a class="footer-link footer-col-1-child-5">Integrations</a>
-                <a class="footer-link footer-col-1-child-6">Command Line</a>
+                <a class="footer-link footer-col-1-child-1" href="#">Web Studio</a>
+                <a class="footer-link footer-col-1-child-2" href="#">DynamicBox Flex</a>
+                <a class="footer-link footer-col-1-child-3" href="#">Programming Forms</a>
+                <a class="footer-link footer-col-1-child-5" href="#">Integrations</a>
+                <a class="footer-link footer-col-1-child-6" href="#">Command Line</a>
         </div>
         <div class="footer rigth">
-            <div href="" class="footer-logo">
-                <img src="assets/logo-full.png">
+            <div class="footer-logo">
+                <a class="logo" href="index.html">
+                    <img src="assets/logo-full.png">
+                </a>
             </div>
             
         </div>
