alteraçoes card cursor color and text decoration

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -66,36 +66,38 @@
         </div>
         <div class="card-container">
         <section class="cards-section">
-            <div class="card">
+            <a class="card" href="#">
+        
                 <span class="circle"></span>
                 <h4>Headless CMS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="card">
+            
+            </a>
+            <a class="card" href="#" >
                 <span class="circle"></span>
                 <h4>Headless CMS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="card">
+            </a>
+            <a class="card" href="#">
                 <span class="circle"></span>
                 <h4>Headless CMS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="card">
+            </a>
+            <a class="card" href="#">
                 <span class="circle"></span>
                 <h4>Headless CMS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="card">
+            </a>
+            <a class="card" href="#">
                 <span class="circle"></span>
                 <h4>Headless CMS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="card">
+            </a>
+            <a class="card" href="#">
                 <span class="circle"></span>
                 <h4>Headless CMS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
+            </a>
 
         </section>
     </div>
