--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -54,7 +54,7 @@
             <h1>How Simple Works</h1>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat.</p>
             <div class="about-section-image">
-                <img src="assets/hero-image.png" alt="hero-image" width="500px">
+                <img src="assets/hero-image.png" alt="hero-image">
             </div>
 
         </div>
