alterações para tornar site responsivo

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -197,23 +197,25 @@
                 <p>Get the latest news and articles to your inbox every month.</p>
             </form>
         </div>
-        <div class="footer-middle-left">
-            <h1 class="footer-col-1-header">Products</h1>
-            <a class="footer-link footer-col-1-child-1" href="#">Web Studio</a>
-            <a class="footer-link footer-col-1-child-2" href="#">DynamicBox Flex</a>
-            <a class="footer-link footer-col-1-child-3" href="#">Programming Forms</a>
-            <a class="footer-link footer-col-1-child-5" href="#"> Integrations</a>
-            <a class="footer-link footer-col-1-child-6" href="#">Command Line</a>
-        </div>
-        <div class="footer-middle-rigth">
-                <h1 class="footer-col-1-header">Resources</h1>
+        <div class="footer-middle-container">
+            <div class="footer-middle-left">
+                <h1 class="footer-col-1-header">Products</h1>
                 <a class="footer-link footer-col-1-child-1" href="#">Web Studio</a>
                 <a class="footer-link footer-col-1-child-2" href="#">DynamicBox Flex</a>
                 <a class="footer-link footer-col-1-child-3" href="#">Programming Forms</a>
-                <a class="footer-link footer-col-1-child-5" href="#">Integrations</a>
+                <a class="footer-link footer-col-1-child-5" href="#"> Integrations</a>
                 <a class="footer-link footer-col-1-child-6" href="#">Command Line</a>
+            </div>
+            <div class="footer-middle-rigth">
+                    <h1 class="footer-col-1-header">Resources</h1>
+                    <a class="footer-link footer-col-1-child-1" href="#">Web Studio</a>
+                    <a class="footer-link footer-col-1-child-2" href="#">DynamicBox Flex</a>
+                    <a class="footer-link footer-col-1-child-3" href="#">Programming Forms</a>
+                    <a class="footer-link footer-col-1-child-5" href="#">Integrations</a>
+                    <a class="footer-link footer-col-1-child-6" href="#">Command Line</a>
+            </div>
         </div>
-        <div class="footer rigth">
+        <div class="footer-rigth">
             <div class="footer-logo">
                 <a class="logo" href="index.html">
                     <img src="assets/logo-full.png">
