--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="btn btn-square btn-learnmore" href="#">Learn More</button>
             </div>
             <div class="hero-video">
-                <video class="video" type="video/mp4">
+                <video class="video" type="video/mp4" autoplay muted loop>
                     <source src="assets/video.mp4">
                 </video>
                 <button class="btn btn-round btn-video" href="#">Watch more</button>
