adjustment advertising section

--- a/html-css-final/landing-page/index.html
+++ b/html-css-final/landing-page/index.html
@@ -182,7 +182,7 @@
         </section>
         <section class="advertising-section">
             <div class="advertising-section-container">
-                <p>Ready to get started</p>
+                <p>Ready to get started?</p>
                 <button class="btn-square btn-advertising">Learn More</button>
             </div>
         </section>
