--- a/css-sports-card/index.html
+++ b/css-sports-card/index.html
@@ -10,29 +10,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-     <div class="card">
-        <div class="shoe">
-            <img src="assets/nike19.png" alt="nike shoe">
-        </div>
-        <div class="card card-wraper-top">
-            <div class="header">
-                <div class="header-logo"><img src="https://i.ibb.co/q7RKcZk/nike.png" alt="nike logo"></div>
-                <div class="header-price">120€</div>
+    <div class="card-container">
+        <div class="card">
+            <div class="shoe">
+                <img src="assets/nike19.png" alt="nike shoe">
             </div>
-            <div class="body">
-                <h2>Air Structure 1</h2>
-                <p>From the Flymesh upper to the triple-density foam midsole, the Nike Air Zoom Structure 19 Men's Running Shoe offers plenty of support and the response you need for a smooth, stable ride that feels ultra fast.</p>
+            <div class="card card-wraper-top">
+                <div class="header">
+                    <div class="header-logo"><img src="https://i.ibb.co/q7RKcZk/nike.png" alt="nike logo"></div>
+                    <div class="header-price">120€</div>
+                </div>
+                <div class="body">
+                    <h2>Air Structure 1</h2>
+                    <p>From the Flymesh upper to the triple-density foam midsole, the Nike Air Zoom Structure 19 Men's Running Shoe offers plenty of support and the response you need for a smooth, stable ride that feels ultra fast.</p>
+                </div>
+                <div class="footer">
+                    <span>AIR</span>
+                </div>
             </div>
-            <div class="footer">
-                <span>AIR</span>
+            
+            <div class="card card-wraper-bottom">
+                <div class="btn"> 
+                    <a href="#" class="button">BUY</a>
+                </div>   
+                <h3>MAN RUNNING SHOES</h3>
             </div>
-        </div>
-        
-        <div class="card card-wraper-bottom">
-            <div class="btn"> 
-                <a href="#" class="button">BUY</a>
-            </div>   
-            <h3>MAN RUNNING SHOES</h3>
         </div>
     </div>
 </body>
